--- a/.c9/launch.json
+++ b/.c9/launch.json
@@ -17,11 +17,39 @@
         {
             "type": "aws-sam",
             "request": "direct-invoke",
+            "name": "environment:GetPetFunction",
+            "invokeTarget": {
+                "target": "template",
+                "templatePath": "template.yaml",
+                "logicalId": "GetPetFunction"
+            },
+            "lambda": {
+                "payload": {},
+                "environmentVariables": {}
+            }
+        },
+        {
+            "type": "aws-sam",
+            "request": "direct-invoke",
             "name": "environment:GetUserFunction",
             "invokeTarget": {
                 "target": "template",
                 "templatePath": "template.yaml",
                 "logicalId": "GetUserFunction"
+            },
+            "lambda": {
+                "payload": {},
+                "environmentVariables": {}
+            }
+        },
+        {
+            "type": "aws-sam",
+            "request": "direct-invoke",
+            "name": "environment:putPetFunction",
+            "invokeTarget": {
+                "target": "template",
+                "templatePath": "template.yaml",
+                "logicalId": "putPetFunction"
             },
             "lambda": {
                 "payload": {},
